--- a/SLL-finals/SEE/10b/templates/success.html
+++ b/SLL-finals/SEE/10b/templates/success.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <title>Form Details</title>
-  </head>
+<head>
+	<title>SUCCESS</title>
+</head>
+<body>
 
-  <body>
-    <h1>Registration Successful</h1>
-  </body>
+	<h3>Registeration successful</h3>
+	<h5>{{res}}</h5>
+
+</body>
 </html>
